--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ body {
 
 .shape {
   opacity: 60%;
-  position: absolute;
+  position: fixed;
   z-index: -1;
   height: 10rem;
   width: 10rem;
@@ -262,10 +262,10 @@ section {
 }
 
 header .logo {
-  color: black;
+  color: rgb(255, 145, 0);
   font-weight: 700;
-  text-decoration: none;
-  font-size: 2rem;
+  text-decoration: indigo;
+  font-size: 3rem;
 }
 
 header ul {
